Update status swagger
